<resources>
    <string name="app_name">Exchange Rate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_description_edit">Edit</string>
    <string name="content_description_delete">Delete</string>
    <string name="filter_no_date">dd-MM-yyyy</string>
    <string name="no_trips">No trips</string>
    <string name="no_trips_matching_criteria">No trips matching your criteria</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="skip">Skip</string>
    <string name="edit_trip">Edit trip</string>
    <string name="title_confirm_lose_trip_changes">Changes will be lost</string>
    <string name="message_confirm_lose_trip_changes">Changes to this trip will be lost. Are you sure?</string>
    <string name="title_confirm_quit_register_flow">Quit registration?</string>
    <string name="message_confirm_quit_register_flow">You can confirm your email later and then sign in.</string>
    <string name="str_continue">Continue</string>
    <string name="error_end_date_must_be_after_start_date">End date must be after start date</string>
    <string name="error_start_date_must_be_before_end_date">Start date must be before end date</string>
    <string name="error_destination_required">Destination is required</string>
    <string name="error_start_date_required">Start date is required</string>
    <string name="error_end_date_required">End date is required</string>
    <string name="add_trip">Add a trip</string>
    <string name="period_year">year</string>
    <string name="period_years">years</string>
    <string name="period_month">month</string>
    <string name="period_months">months</string>
    <string name="period_day">day</string>
    <string name="period_days">days</string>
    <string name="string_and">and</string>
    <string name="error_invalid_date">Invalid date</string>
    <string name="title_confirm_delete_trip">Confirm</string>
    <string name="message_confirm_delete_trip">Are you sure you want to delete this trip?\nDestination: %1$s\nStart date: %2$s\nEndDate: %3$s</string>
    <string name="my_trips">My trips</string>
    <string name="actions">Actions:</string>
    <string name="edit_my_name">Edit my name</string>
    <string name="sign_out">Sign out</string>
    <string name="manage_users">Manage users</string>
    <string name="view_my_trips">View my trips</string>
    <string name="print">Print</string>
    <string name="search_trips">Search trips</string>
    <string name="print_trips">Print trips</string>
    <string name="error_print_not_supported">Sorry, printing your trips is not available on this Android version.</string>
    <string name="error_print_manager_not_available">Sorry, print manager is not available.</string>
    <string name="role_user">User</string>
    <string name="role_user_manager">User Manager</string>
    <string name="role_administrator">Administrator</string>
    <string name="no_role">No role</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_user_name_required">User name is required</string>
    <string name="error_password_confirmation_required">Password confirmation is required</string>
    <string name="error_passwords_do_not_match">Passwords don\'t match</string>
    <string name="confirm_your_email_address">Confirm your email address</string>
    <string name="error_unexpected">An unexpected error has occurred.</string>
    <string name="content_description_disclosure">Disclosure</string>
    <string name="content_description_icon">Icon</string>
    <string name="no_users">No users</string>
    <string name="no_users_matching_criteria">No users matching your criteria</string>
    <string name="trips">Trips</string>
    <string name="role">Role</string>
    <string name="account_status">Account Status</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="readonly_email_rationale">* Cannot be changed</string>
    <string name="readonly_role_rationale">* Role can only be changed by an Admin</string>
    <string name="readonly_status_rationale">* Status can be changed only by an Admin</string>
    <string name="readonly_name_rationale">* Name can be changed only by an Admin</string>
    <string name="title_confirm_lose_user_changes">Confirm</string>
    <string name="message_confirm_lose_user_changes">Discard user changes?</string>
    <string name="error_socket_timeout">"Connection timeout. "</string>
    <string name="error_cannot_connect_to_server">Can\'t connect to server.</string>
    <string name="last_updated">Last updated %s</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="refresh_interval">Refresh interval</string>
    <string name="pref_key_refresh_interval">pref_refresh_interval_seconds</string>
</resources>
