<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UserEditorFragment">

    <TextView
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:text="User Name"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        app:icon="@drawable/ic_check"
        app:iconSize="16dp"
        app:iconGravity="end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameView"
        app:layout_constraintBottom_toBottomOf="@id/nameView"
        />

    <ProgressBar
        android:id="@+id/loadingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/saveButton"
        app:layout_constraintRight_toRightOf="@id/saveButton"
        app:layout_constraintTop_toTopOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="@id/saveButton"
        />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/readonly_name_rationale"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:lines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email"
                app:helperText="@string/readonly_email_rationale"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textIsSelectable="true"
                    android:focusable="false"
                    android:lines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="12sp"
                android:paddingBottom="12sp"
                android:text="@string/role"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/roleToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:singleSelection="true"
                app:checkedButton="@id/userRoleButton"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userRoleButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_user"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/userManagerRoleButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_user_manager"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/adminRoleButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/role_administrator"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/readOnlyRoleRationaleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/readonly_role_rationale"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingTop="12sp"
                android:paddingBottom="12sp"
                android:text="@string/account_status"
                android:textSize="16sp"
                />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/accountStatusToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:singleSelection="true"
                app:checkedButton="@id/accountEnabledButton"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountEnabledButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/enabled"
                    app:icon="@drawable/ic_lock_unlocked"
                    app:iconTint="@color/colorAccountEnabled"
                    app:iconSize="16dp"
                    app:iconGravity="textStart"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/nameView"
                    app:layout_constraintBottom_toBottomOf="@id/nameView"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/accountDisabledButton"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/disabled"
                    app:icon="@drawable/ic_lock_locked"
                    app:iconTint="@color/colorAccountDisabled"
                    app:iconSize="16dp"
                    app:iconGravity="textStart"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/nameView"
                    app:layout_constraintBottom_toBottomOf="@id/nameView"
                    />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/readOnlyStatusRationaleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/readonly_status_rationale"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>