<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.UserProfileFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/userMenuFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintTop_toTopOf="@id/nameView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/nameView"
        app:fabCustomSize="32dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:tint="@android:color/white"
        app:elevation="3dp"
        />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:text="User name"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/userMenuFab"
        app:layout_constraintStart_toEndOf="@+id/userMenuFab"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="User role"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nameView"
        app:layout_constraintLeft_toLeftOf="@id/nameView"
        />

    <TextView
        android:id="@+id/actionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:text="@string/actions"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/roleView"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/actionsLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <View style="@style/ListItemSeparator" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/editNameMenuItem"
                style="@style/MenuItem">

                <ImageView
                    style="@style/MenuItemIcon"
                    android:src="@drawable/ic_edit"
                    />

                <TextView
                    style="@style/MenuItemText"
                    android:text="@string/edit_my_name"
                    />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/nameEditor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@android:color/white"
                tools:visibility="invisible">
                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:hint="@string/user_name"
                    android:maxLength="30"
                    android:lines="1"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/saveButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ProgressBar
                    android:id="@+id/nameEditorLoadingView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    app:layout_constraintLeft_toLeftOf="@id/saveButton"
                    app:layout_constraintRight_toRightOf="@id/saveButton"
                    app:layout_constraintTop_toTopOf="@id/saveButton"
                    app:layout_constraintBottom_toBottomOf="@id/saveButton"
                    />
                <ImageButton
                    android:id="@+id/saveButton"
                    android:contentDescription="@string/save"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_check"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:tint="@color/colorAccountEnabled"
                    app:layout_constraintRight_toLeftOf="@id/cancelButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ImageButton
                    android:id="@+id/cancelButton"
                    android:contentDescription="@string/cancel"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:padding="10dp"
                    android:adjustViewBounds="true"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_x"
                    android:background="?selectableItemBackgroundBorderless"
                    android:scaleType="centerInside"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:tint="@color/colorAccountDisabled"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>


        <View style="@style/ListItemSeparator" />

        <LinearLayout
            android:id="@+id/viewMyTripsMenuItem"
            style="@style/MenuItem">

            <ImageView
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_location_pin"
                />

            <TextView
                style="@style/MenuItemText"
                android:text="@string/view_my_trips"
                />
        </LinearLayout>

        <View style="@style/ListItemSeparator" />

        <LinearLayout
            android:id="@+id/manageUsersMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/MenuItem"
                android:clickable="false"
                android:focusable="false">

                <ImageView
                    style="@style/MenuItemIcon"
                    android:src="@drawable/ic_users"
                    />

                <TextView
                    style="@style/MenuItemText"
                    android:text="@string/manage_users"
                    />
            </LinearLayout>

            <View style="@style/ListItemSeparator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/signOutMenuItem"
            style="@style/MenuItem">

            <ImageView
                style="@style/MenuItemIcon"
                android:src="@drawable/ic_power"
                />

            <TextView
                style="@style/MenuItemText"
                android:text="@string/sign_out"
                />
        </LinearLayout>

        <View style="@style/ListItemSeparator" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>